# vitana-platform

./: .gcp-config  .gcp-project  .gitignore  .graphifyignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CI_VERIFICATION_TEST.md  CLAUDE.md  CODEOWNERS  CURRENT-STATE.md  DATABASE_SCHEMA.md  DEAD_CODE_REPORT.md  DESIGN.md  Dockerfile  GITHUB_CLEANUP_REPORT.md  GOVERNANCE_DEPLOYED.md  IOS_CRASH_FIX_SUMMARY.md  KB_INTEGRATION_DEMO.md  KB_INTEGRATION_EXECUTIVE_SUMMARY.md  KB_INTEGRATION_FINAL_REPORT.md  LIVE_ROOM_SESSION_FIX_SUMMARY.md  PHASE1_TEST_PLAN.md  PHASE2-EXECUTION-SUMMARY.md  PHASE2-PROGRESS.md  PHASE2B-EXECUTION-SUMMARY.md  PHASE2C-EXECUTION-SUMMARY.md  SESSION-HANDOFF.md  TASK_4B_PHASE2_SUMMARY.md  VTID-02034b-stale-instance-404.patch  VTID-02034c-budget-reset.patch  VTID-DEV-CICDL-0031-SUMMARY.md  auth.txt  auth_output.txt  bench.sh  claude.md  cloud-run-migrate.json  cloudbuild.yaml  deploy-4b-phase2.sh  deploy-devhub-feed.sh  (+38 more)
.claude/: settings.json
.github/: pull_request_template.md
.obsidian/: workspace.json
agents/: planner_core.py  validator_core.py  worker_core.py
config/: cicd-concurrency.json  service-path-map.json
crew_template/: KB_INTEGRATION.md  autonomy_guardrails.yaml  crew.yaml  oasis_events_v1.yaml  provider_policy.yaml
database/: CLAUDE.md
docs/: AWIN_PRODUCT_ACTIVATION_RUNBOOK.md  AWS-CUTOVER-RUNBOOK.md  AWS-PRODUCTION-BUILD-LOG.md  AWS-PRODUCTION-HANDOVER.md  AWS-STAGING-VALIDATION.md  COMMAND_HUB_WIRING.md  CONVERSATION_DEFECTS_FIX_PLAN.md  CONVERSATION_FLOW_ARCHITECTURE.md  CONVERSATION_FLOW_HANDOFF.md  CONVERSATION_FLOW_ROADMAP_V3.md  DEPLOY_AUTOPILOT.md  DEPLOY_WITH_ACTIONS.md  DEV-CICDL-0034-IMPLEMENTATION.md  FAILING-ROUTINES-ANALYSIS.md  GOVERNANCE_ANALYSIS.md  GOVERNANCE_START_HERE.md  HANDOFF-voice-quality.md  KB_ACCESS_MODE_DECISION.md  MARKETPLACE-RESEARCH-VITANA-DISCOVER-HUB.md  MERCHANT_ONBOARDING_RUNBOOK.md  MOBILE_DEVICE_TESTING.md  OPERATOR_SPEC.md  (+24 more)
services/agents/orb-agent/: .gitignore  Dockerfile  README.md  main.py  manifest.json  package.json  pyproject.toml  requirements.txt  service.yaml
services/agents/orb-agent/src/orb_agent/: bootstrap.py  config.py  continuation_intent.py  directives.py  gateway_client.py  health.py  identity.py  instructions.py  navigator.py  oasis.py  providers.py  registry_client.py  session.py  stt_hard_recovery.py  text_only_loop.py  tools.py  video.py  watchdogs.py  worker_entry.py
services/agents/orb-agent/tests/: test_continuation_intent.py  test_create_index_improvement_plan_param.py  test_greeting_fires_on_join.py  test_no_absolute_sibling_imports.py  test_recipient_resolution_observability.py  test_report_to_specialist_observability.py  test_silent_stall_predicate.py  test_silent_stall_watchdog.py  test_silero_vad_tune.py  test_smoke.py  test_stt_fallback.py  test_stt_hard_recovery.py  test_stt_observability.py  test_stt_recovery.py  test_tools_catalogue.py  test_turn_handling.py  test_turn_responded_emitter.py  test_wake_brief_greeting_consumption.py  test_wake_brief_suppressed_no_fallback.py
services/agents/vitana-orchestrator/: .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  server.py  vitana-orchestrator.yml
services/agents/vitana-orchestrator/src/vitana_orchestrator/: __init__.py  __main__.py  logging_config.py  main.py  metrics.py  orchestrator.py  safety.py  stage_gate.py
services/agents/vitana-orchestrator/src/vitana_orchestrator/adapters/: __init__.py  base.py  claude.py  crewai.py  mock.py
services/agents/vitana-orchestrator/src/vitana_orchestrator/output/: __init__.py  base.py  console.py
services/agents/vitana-orchestrator/src/vitana_orchestrator/verification/: __init__.py  validators.py  verifier.py
services/agents/vitana-orchestrator/tests/: __init__.py  test_orchestrator.py  test_safety.py  test_verification.py
(+3865 files in other folders)
